# template-vscode-python

./: pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
